--- a/cookbooks/vsftpd/.gitignore
+++ b/cookbooks/vsftpd/.gitignore
@@ -1,15 +1,14 @@
-.vagrant
-Berksfile.lock
-*~
-*#
-.#*
-\#*#
-.*.sw[a-z]
-*.un~
-/cookbooks
-
 # Bundler
-Gemfile.lock
-bin/*
-.bundle/*
+/.bundle/
+/bin/
+/bundle/
+/vendor/gems/
 
+# Berkshelf
+/cookbooks/
+Berksfile.lock
+
+# Vagrant
+.vagrant
+.kitchen/
+.kitchen.local.yml
